<resources>
    <string name="app_name">task_manager</string>
    <string name="todo">TODO</string>
    <string name="addTask" />
    <string name="add_task" />
    <!-- Strings for task details -->
    <string name="task_name">Nombre de la Tarea</string>
    <string name="task_description">Descripción</string>
    <string name="select_date">Seleccionar Fecha</string>
    <string name="select_time">Seleccionar Hora</string>
    <string name="save_task">Guardar Tarea</string>
    <string name="select_contact">Seleccionar Contacto</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="all_tasks">Todas las Tareas</string>
    <string name="categories">Categorias</string>
    <string name="calendar">Calendario</string>
    <string name="enter_category_name">Nombre de Categoria</string>
    <string name="add_category">Agregar Categoría</string>

    <!-- Array for reminder options -->
    <string-array name="reminder_options">
        <item>10 minutos antes</item>
        <item>1 día antes</item>
        <item>Sin recordatorio</item>
    </string-array>

    <!-- Array for task categories -->
    <string-array name="task_categories">
        <item>Personal</item>
        <item>Trabajo</item>
        <item>Familia</item>
        <item>Otras</item>
    </string-array>
</resources>