<!-- res/layout/activity_add_edit_task.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Agregar tarea"
            android:textAlignment="center"
            android:textColor="@color/azul_fuerte"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edit_text_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:inputType="text"/>

        <Button
            android:id="@+id/button_choose_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_medio"
            android:text="@string/select_date" />

        <Button
            android:id="@+id/button_choose_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_medio"
            android:text="@string/select_time" />

        <Spinner
            android:id="@+id/spinner_reminder_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_choose_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_medio"
            android:text="@string/select_contact" />

        <Button
            android:id="@+id/button_save_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_medio"
            android:text="@string/save_task" />
    </LinearLayout>
</ScrollView>
